Fix calendar tiles and week number misaligned
Fixes #412

--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -78,7 +78,6 @@
         justify-content: center;
         font-size: .75em;
         font-weight: bold;
-        padding: calc(.75em / .75) calc(.5em / .75);
       }
     }
 
@@ -105,9 +104,10 @@
 
   &__tile {
     max-width: 100%;
-    text-align: center;
-    padding: .75em .5em;
+    padding: 10px 6.6667px;
     background: none;
+    text-align: center;
+    line-height: 16px;
 
     &:disabled {
       background-color: rgb(240, 240, 240);
